--- a/RoamAI/appsettings.json
+++ b/RoamAI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-3DVE6SH7\\AÖ2100000419;Database=IdentityAppDb;User Id=sa;Password=1234;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
